@startuml
title 工厂方法模式（Factory Method Pattern）——敌机创建

skinparam classAttributeIconSize 0

abstract class AbstractEnemy {
    +AbstractEnemy(locationX:int, locationY:int, speedX:int, speedY:int, hp:int)
    +forward(): void
    +shoot(): List<BaseBullet>
    +dropProp(): AbstractProp
}

class MobEnemy {
    +MobEnemy(locationX:int, locationY:int, speedX:int, speedY:int, hp:int)
    +shoot(): List<BaseBullet>
    +dropProp(): AbstractProp
}

class elite_Enemy {
    +elite_Enemy(locationX:int, locationY:int, speedX:int, speedY:int, hp:int)
    +shoot(): List<BaseBullet>
    +dropProp(): AbstractProp
}

class elitePlus_Enemy {
    +elitePlus_Enemy(locationX:int, locationY:int, speedX:int, speedY:int, hp:int)
    +shoot(): List<BaseBullet>
    +dropProp(): AbstractProp
}

class elitePro_Enemy {
    +elitePro_Enemy(locationX:int, locationY:int, speedX:int, speedY:int, hp:int)
    +shoot(): List<BaseBullet>
    +dropProp(): AbstractProp
}

class boss_enemy {
    +boss_enemy(locationX:int, locationY:int, speedX:int, speedY:int, hp:int)
    +shoot(): List<BaseBullet>
    +dropProp(): AbstractProp
}

interface EnemyFactory {
    +createEnemy(locationX:int, locationY:int): AbstractEnemy
}

class MobEnemyFactory {
    +createEnemy(locationX:int, locationY:int): AbstractEnemy
}

class EliteEnemyFactory {
    +createEnemy(locationX:int, locationY:int): AbstractEnemy
}

class ElitePlusEnemyFactory {
    +createEnemy(locationX:int, locationY:int): AbstractEnemy
}

class EliteProEnemyFactory {
    +createEnemy(locationX:int, locationY:int): AbstractEnemy
}

class BossEnemyFactory {
    +createEnemy(locationX:int, locationY:int): AbstractEnemy
}

class Game {
    -enemyAircrafts: List<AbstractEnemy>
    +enemyGenerateAction(): void
}

AbstractEnemy <|-- MobEnemy
AbstractEnemy <|-- elite_Enemy
AbstractEnemy <|-- elitePlus_Enemy
AbstractEnemy <|-- elitePro_Enemy
AbstractEnemy <|-- boss_enemy

EnemyFactory <|.. MobEnemyFactory
EnemyFactory <|.. EliteEnemyFactory
EnemyFactory <|.. ElitePlusEnemyFactory
EnemyFactory <|.. EliteProEnemyFactory
EnemyFactory <|.. BossEnemyFactory

MobEnemyFactory ..> MobEnemy : 创建
EliteEnemyFactory ..> elite_Enemy : 创建
ElitePlusEnemyFactory ..> elitePlus_Enemy : 创建
EliteProEnemyFactory ..> elitePro_Enemy : 创建
BossEnemyFactory ..> boss_enemy : 创建

Game ..> EnemyFactory : 使用
@enduml